kubernetes/gluster.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
subsets:
- addresses:
  - ip: 10.10.10.7
  ports:
  - port: 1
- addresses:
  - ip: 10.10.10.8
  ports:
  - port: 1
