kubernetes/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
 name: wordpress
 labels:
   app: wordpress
spec:
 type: NodePort
 ports:
   - port: 80
     protocol: TCP
     targetPort: 80
 selector:
   app: wordpress
   tier: frontend

   #apiVersion: v1
   #kind: Service
   #metadata:
   #name: wordpress
   #spec:
   #type: LoadBalancer
   #loadBalancerIP: 23.236.57.146
   #selector:
   # app: wordpress
   # tier: frontend
   #ports:
   #- protocol: TCP
   # port: 80
   # targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: wordpress
        name: wordpress
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m          
        volumeMounts:
         - mountPath: /var/www/html
           name: gv0
      volumes:
      - name: gv0
        glusterfs:
         endpoints: glusterfs-cluster
         path: gv0
